syntax = "proto3";

option go_package = "./proto";
package greet_service;

service GreetService {
    // Unary RPC: Client sends a request, server responds with a message
    rpc SayHello (NoParameters) returns (HelloResponse);

    // Server Streaming: Server sends multiple responses for a single request
    rpc SayHelloServerStreaming (NameList) returns (stream HelloResponse);

    // Client Streaming: Client sends multiple requests, server responds once
    rpc SayHelloClientStreaming (stream HelloRequest) returns (MessageList);

    // Bi-directional Streaming: Both client and server stream messages
    rpc BiDstreaming (stream HelloRequest) returns (stream HelloResponse);
}

// Empty request message
message NoParameters {}

// Request containing a single name
message HelloRequest {
    string name = 1;
}

// Response containing a single greeting message
message HelloResponse {
    string message = 1;
}

// Request containing multiple names (for server streaming)
message NameList {
    repeated string names = 2;
}

// Response containing multiple messages (for client streaming)
message MessageList {
    repeated string messages = 1;
}
